--- a/src/containers/quiz/Quiz.module.css
+++ b/src/containers/quiz/Quiz.module.css
@@ -5,6 +5,7 @@
     flex-grow: 1;
     width: 100%;
     background: linear-gradient(90deg, #5041b2 0%, #7969e6 100%);
+    height: 100vh;
 }
 
 .Quiz h1 {
