--- a/src/components/activeQuiz/answersList/answerItem/AnswerItem.module.css
+++ b/src/components/activeQuiz/answersList/answerItem/AnswerItem.module.css
@@ -1,1 +1,12 @@
-.AnswerItem {}
+.AnswerItem {
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+.AnswerItem:hover {
+    background: rgba(255, 255, 255, 20%);
+    transition: background .3s ease-in-out;
+}
