- styling for rigth ang wrong answers;

--- a/src/components/activeQuiz/answersList/answerItem/AnswerItem.module.css
+++ b/src/components/activeQuiz/answersList/answerItem/AnswerItem.module.css
@@ -10,3 +10,11 @@
     background: rgba(255, 255, 255, 20%);
     transition: background .3s ease-in-out;
 }
+
+.AnswerItem.success {
+    background: rgba(161, 240, 69, 70%);
+}
+
+.AnswerItem.error {
+    background: rgba(240, 87, 108, 70%);
+}
